[gd_scene load_steps=2 format=3 uid="uid://budlr03m3h5c1"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_yqkdb"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_yqkdb")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPos_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1370, 50)

[node name="SpawnPos_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1370, 175)

[node name="SpawnPos_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1370, 300)

[node name="SpawnPos_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1370, 425)

[node name="SpawnPos_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1370, 550)

[node name="SpawnPos_06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1370, 675)

[node name="SpawnTImer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SpawnPathTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
